packages/typ/tests/fixtures/diagnostics/0963_mli_module_path_unary_overapplied_01.mli.expected
File "0963_mli_module_path_unary_overapplied_01.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0963_mli_module_path_unary_overapplied_01 is not a valid module name.

File "0963_mli_module_path_unary_overapplied_01.mli", line 5, characters 14-35:
5 | val x_alpha : (int, bool) M_alpha.t
                  ^^^^^^^^^^^^^^^^^^^^^
Error: The type constructor M_alpha.t expects 1 argument(s),
       but is here applied to 2 argument(s)
