packages/typ/tests/fixtures/diagnostics/0963_mli_module_path_unary_overapplied_01.mli
module M_alpha : sig
  type 'a t
end

val x_alpha : (int, bool) M_alpha.t
